// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReceiveFundsForm > should emit amount onChange event 1`] = `
<DocumentFragment>
  <div
    data-testid="ReceiveFundsForm"
  >
    <div
      class="mt-4 space-y-4"
    >
      <fieldset
        class="[&>.FormLabel]:text-theme-primary-600 focus-within:[&>.FormLabel]:text-theme-primary-600 flex min-w-0 flex-col"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="amount"
        >
          Amount
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="FormLabel__optional"
          >
            optional
          </span>
        </label>
        <div
          class="relative"
        >
          <div
            class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 pr-20"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                data-testid="ReceiveFundsForm__amount"
                name="amount"
                placeholder="Amount"
                type="text"
                value="10"
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="[&>.FormLabel]:text-theme-primary-600 focus-within:[&>.FormLabel]:text-theme-primary-600 flex min-w-0 flex-col"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="memo"
        >
          Memo
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="FormLabel__optional"
          >
            optional
          </span>
        </label>
        <div
          class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              autocomplete="off"
              class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
              data-testid="ReceiveFundsForm__memo"
              maxlengthlabel="255"
              name="memo"
              type="text"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
            data-testid="Input__addon-end"
          >
            <div
              class=""
            >
              <span
                class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                data-testid="InputCounter__counter"
              >
                0/255
              </span>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFundsForm > should emit memo onChange event 1`] = `
<DocumentFragment>
  <div
    data-testid="ReceiveFundsForm"
  >
    <div
      class="mt-4 space-y-4"
    >
      <fieldset
        class="[&>.FormLabel]:text-theme-primary-600 focus-within:[&>.FormLabel]:text-theme-primary-600 flex min-w-0 flex-col"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="amount"
        >
          Amount
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="FormLabel__optional"
          >
            optional
          </span>
        </label>
        <div
          class="relative"
        >
          <div
            class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 pr-20"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                data-testid="ReceiveFundsForm__amount"
                name="amount"
                placeholder="Amount"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="[&>.FormLabel]:text-theme-primary-600 focus-within:[&>.FormLabel]:text-theme-primary-600 flex min-w-0 flex-col"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="memo"
        >
          Memo
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="FormLabel__optional"
          >
            optional
          </span>
        </label>
        <div
          class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              autocomplete="off"
              class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
              data-testid="ReceiveFundsForm__memo"
              maxlengthlabel="255"
              name="memo"
              type="text"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
            data-testid="Input__addon-end"
          >
            <div
              class=""
            >
              <span
                class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                data-testid="InputCounter__counter"
              >
                4/255
              </span>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFundsForm > should not show memo if is not supported by network 1`] = `
<DocumentFragment>
  <div
    data-testid="ReceiveFundsForm"
  >
    <div
      class="mt-4 space-y-4"
    >
      <fieldset
        class="[&>.FormLabel]:text-theme-primary-600 focus-within:[&>.FormLabel]:text-theme-primary-600 flex min-w-0 flex-col"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="amount"
        >
          Amount
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="FormLabel__optional"
          >
            optional
          </span>
        </label>
        <div
          class="relative"
        >
          <div
            class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 pr-20"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                data-testid="ReceiveFundsForm__amount"
                name="amount"
                placeholder="Amount"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFundsForm > should render 1`] = `
<DocumentFragment>
  <div
    data-testid="ReceiveFundsForm"
  >
    <div
      class="mt-4 space-y-4"
    >
      <fieldset
        class="[&>.FormLabel]:text-theme-primary-600 focus-within:[&>.FormLabel]:text-theme-primary-600 flex min-w-0 flex-col"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="amount"
        >
          Amount
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="FormLabel__optional"
          >
            optional
          </span>
        </label>
        <div
          class="relative"
        >
          <div
            class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14 pr-20"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                autocomplete="off"
                class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
                data-testid="ReceiveFundsForm__amount"
                name="amount"
                placeholder="Amount"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </fieldset>
      <fieldset
        class="[&>.FormLabel]:text-theme-primary-600 focus-within:[&>.FormLabel]:text-theme-primary-600 flex min-w-0 flex-col"
      >
        <label
          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
          data-testid="FormLabel"
          for="memo"
        >
          Memo
          <span
            class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
            data-testid="FormLabel__optional"
          >
            optional
          </span>
        </label>
        <div
          class="flex w-full appearance-none items-center space-x-2 rounded px-4 text-theme-text transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
        >
          <div
            class="relative flex h-full flex-1"
          >
            <input
              autocomplete="off"
              class="!bg-transparent !p-0 focus:shadow-none focus:outline-none focus:!ring-0 focus:!ring-transparent [&.shadow-none]:shadow-none no-ligatures w-full border-none !text-sm placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base"
              data-testid="ReceiveFundsForm__memo"
              maxlengthlabel="255"
              name="memo"
              type="text"
              value=""
            />
          </div>
          <div
            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
            data-testid="Input__addon-end"
          >
            <div
              class=""
            >
              <span
                class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                data-testid="InputCounter__counter"
              >
                0/255
              </span>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
  </div>
</DocumentFragment>
`;
